// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/atoms/containers/AsideContainer snapshot 1`] = `
<aside
  className="flex flex-col flex-1 order-2 md:order-1  gap-y-8 items-center md:mt-16 w-full  min-w-max lg:w-1/3 h-auto undefined"
>
  <div
    className="flex flex-col h-full"
  >
    <div
      className="flex md:sticky md:top-16"
    >
      children
    </div>
  </div>
</aside>
`;

exports[`components/atoms/containers/AsideContainer snapshot 2`] = `
<aside
  className="flex flex-col flex-1 order-3 gap-y-8 items-center md:mt-16 w-full  min-w-max lg:w-1/3 h-auto undefined"
>
  <div
    className="flex flex-col h-full"
  >
    <div
      className="flex md:sticky md:top-16"
    >
      children
    </div>
  </div>
</aside>
`;
